Add navigation and side navigation

--- a/index.html
+++ b/index.html
@@ -14,5 +14,62 @@
     <script defer type="module" src="src/js/app.js"></script>
     <title>Portfolio - Bartosz Kozłowski</title>
   </head>
-  <body></body>
+  <body>
+    <header class="header">
+      <div class="introduce">
+        <div class="introduce__rectangle"></div>
+        <p class="introduce__text">bartosz kozłowski</p>
+      </div>
+      <nav class="nav-main" id="nav">
+        <ul class="nav-main__list">
+          <li class="nav-main__item">
+            <a href="#" class="nav-main__link">home</a>
+          </li>
+          <li class="nav-main__item">
+            <a href="#" class="nav-main__link">about me</a>
+          </li>
+          <li class="nav-main__item">
+            <a href="#" class="nav-main__link">projects</a>
+          </li>
+          <li class="nav-main__item">
+            <a href="#" class="nav-main__link">contact</a>
+          </li>
+        </ul>
+        <button class="icon" id="toggle">
+          <div class="line line1"></div>
+          <div class="line line2"></div>
+        </button>
+      </nav>
+    </header>
+    <aside class="side-nav">
+      <ul class="side-nav__list">
+        <li class="side-nav__item">
+          <a class="side-nav__link links" href="#">home</a>
+        </li>
+        <li class="side-nav__item">
+          <a class="side-nav__link links" href="#">about me</a>
+        </li>
+        <li class="side-nav__item">
+          <a class="side-nav__link links" href="#">projects</a>
+        </li>
+        <li class="side-nav__item">
+          <a class="side-nav__link links" href="#">contact</a>
+        </li>
+      </ul>
+      <div class="side-nav__img">
+        <img src="img/SAMURAJ.png" alt="" />
+      </div>
+      <ul class="side-nav__contact">
+        <li class="constact-item">
+          <a class="side-nav__link" href="#">GitHub</a>
+        </li>
+        <li class="constact-item">
+          <a class="side-nav__link" href="#">LinkedIn</a>
+        </li>
+        <li class="constact-item">
+          <a class="side-nav__link" href="#">Signal</a>
+        </li>
+      </ul>
+    </aside>
+  </body>
 </html>
