Add hero section and put some animation on it

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <header class="header">
       <div class="introduce">
         <div class="introduce__rectangle"></div>
-        <p class="introduce__text">bartosz kozłowski</p>
+        <p class="introduce__text"></p>
       </div>
       <nav class="nav-main" id="nav">
         <ul class="nav-main__list">
@@ -71,5 +71,14 @@
         </li>
       </ul>
     </aside>
+    <section class="hero">
+      <h1 class="hero__text">
+        bartosz<br /><span class="hero__sec-text"> kozłowski</span>
+      </h1>
+      <p class="hero__subtitle">web developer</p>
+      <div class="hero__circle"></div>
+      <a href="#" class="hero__resume">resume</a>
+      <img class="hero__img" src="img/HERO-IMAGE.png" alt="origami swan" />
+    </section>
   </body>
 </html>
