--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
       href="https://fonts.googleapis.com/css2?family=Bodoni+Moda:opsz@6..96&family=Nunito+Sans:wght@400;700;800&display=swap"
       rel="stylesheet"
     />
+    <script
+      src="https://kit.fontawesome.com/be8c33a886.js"
+      crossorigin="anonymous"
+    ></script>
     <link rel="stylesheet" href="src/sass/main.scss" />
     <script defer type="module" src="src/js/app.js"></script>
     <title>Portfolio - Bartosz Kozłowski</title>
@@ -80,5 +84,65 @@
       <a href="#" class="hero__resume">resume</a>
       <img class="hero__img" src="img/HERO-IMAGE.png" alt="origami swan" />
     </section>
+    <div class="arrow__down">
+      <i class="fa-solid fa-chevron-down"></i>
+    </div>
+
+    <main>
+      <section class="about-me container">
+        <div class="about-me__container">
+          <img
+            src="img/me.png"
+            alt="The boy sitting on the floor in Minka house"
+          />
+          <div class="about-me__description">
+            <h2 class="subheding">about me</h2>
+            <p>
+              Hello! My name is Bartek and I enjoy creating and coding web
+              sites. My journey start in early 2020. Programming for me is like
+              watching a great movie that we don't want it to end too soon.
+              Luckily for me there is a lot to learn :)
+            </p>
+          </div>
+        </div>
+        <div class="skills">
+          <div class="skill">
+            <h3 class="skill__title">i know</h3>
+            <div class="skill__icons grid-col-3">
+              <i class="fa-brands fa-html5"></i>
+              <i class="fa-brands fa-css3-alt"></i>
+              <i class="fa-brands fa-js"></i>
+              <i class="fa-brands fa-bootstrap"></i>
+              <i class="fa-brands fa-sass"></i>
+              <i class="fa-brands fa-git-alt"></i>
+              <i class="fa-brands fa-github"></i>
+              <i class="fa-brands fa-figma"></i>
+            </div>
+          </div>
+          <div class="skill">
+            <h3 class="skill__title">study now</h3>
+            <div class="skill__icons grid-col-3">
+              <i class="fa-brands fa-react"></i>
+              <img src="https://img.icons8.com/wired/128/888888/webpack.png" />
+              <img src="https://img.icons8.com/ios/50/888888/redux.png" />
+            </div>
+          </div>
+          <div class="skill">
+            <h3 class="skill__title">goals</h3>
+            <div class="skill__icons grid-col-3">
+              <img
+                src="https://img.icons8.com/ios-filled/50/888888/typescript.png"
+              />
+              <i class="fa-brands fa-node-js"></i>
+              <img
+                src="https://img.icons8.com/external-tal-revivo-bold-tal-revivo/128/888888/external-mongodb-a-cross-platform-document-oriented-database-program-logo-bold-tal-revivo.png"
+              />
+              <i class="fa-brands fa-vuejs"></i>
+              <i class="fa-brands fa-angular"></i>
+            </div>
+          </div>
+        </div>
+      </section>
+    </main>
   </body>
 </html>
