Add section project - slider

--- a/index.html
+++ b/index.html
@@ -82,6 +82,7 @@
       <p class="hero__subtitle">web developer</p>
       <div class="hero__circle"></div>
       <a href="#" class="hero__resume">resume</a>
+
       <img class="hero__img" src="img/HERO-IMAGE.png" alt="origami swan" />
     </section>
     <div class="arrow__down">
@@ -92,6 +93,7 @@
       <section class="about-me container">
         <div class="about-me__container">
           <img
+            class="about-me__img"
             src="img/me.png"
             alt="The boy sitting on the floor in Minka house"
           />
@@ -140,6 +142,43 @@
               <i class="fa-brands fa-vuejs"></i>
               <i class="fa-brands fa-angular"></i>
             </div>
+          </div>
+        </div>
+      </section>
+      <section class="projects container">
+        <h2 class="subheding">projects</h2>
+        <div class="slider-container">
+          <div class="left-slide">
+            <div style="background-color: #ffb866">
+              <h3>Project name</h3>
+              <p>description</p>
+            </div>
+            <div style="background-color: #2a86ba">
+              <h3>Project name</h3>
+              <p>description</p>
+            </div>
+            <div style="background-color: #fd3555">
+              <h3>Project name</h3>
+              <p>description</p>
+            </div>
+            <div style="background-color: #252e33">
+              <h3>Project name</h3>
+              <p>description</p>
+            </div>
+          </div>
+          <div class="right-slide">
+            <div style="background-image: url(img/black.jpg)"></div>
+            <div style="background-image: url(img/red.jpg)"></div>
+            <div style="background-image: url(img/blue.jpg)"></div>
+            <div style="background-image: url(img/yellow.jpg)"></div>
+          </div>
+          <div class="action-buttons">
+            <button class="down-button">
+              <i class="fas fa-arrow-down"></i>
+            </button>
+            <button class="up-button">
+              <i class="fas fa-arrow-up"></i>
+            </button>
           </div>
         </div>
       </section>
