--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
             alt="The boy sitting on the floor in Minka house"
           />
           <div class="about-me__description">
-            <h2 class="subheding">about me</h2>
+            <h2 class="subheading">about me</h2>
             <p>
               Hello! My name is Bartek and I enjoy creating and coding web
               sites. My journey start in early 2020. Programming for me is like
@@ -146,7 +146,8 @@
         </div>
       </section>
       <section class="projects container">
-        <h2 class="subheding">projects</h2>
+        <h2 class="subheading">projects</h2>
+        <p>IN PROGRESS...</p>
         <div class="slider-container">
           <div class="left-slide">
             <div style="background-color: #ffb866">
@@ -183,5 +184,35 @@
         </div>
       </section>
     </main>
+    <footer class="footer">
+      <div class="footer__contact">
+        <div class="icons">
+          <a href="#"
+            ><img
+              src="https://img.icons8.com/ios-glyphs/80/ffffff/linkedin-circled--v1.png"
+          /></a>
+          <a href="#"
+            ><img
+              src="https://img.icons8.com/ios-filled/80/ffffff/signal-app.png"
+          /></a>
+          <a href="#"
+            ><img src="https://img.icons8.com/ios-glyphs/80/ffffff/github.png"
+          /></a>
+        </div>
+        <p class="copyriht">©️ COPYRIGHT BY BARTOSZ KOZŁOWSKI</p>
+      </div>
+      <div class="footer__resume">
+        <h2 class="subheading">contact</h2>
+        <a href="#" class="footer-resume">resume</a>
+        <a class="promo" target="_blank" href="https://icons8.com"
+          >Some icon by Icons8</a
+        >
+      </div>
+      <div class="footer__designed">
+        <img src="img/FOOTER IMAGE.png" alt="origami boat" />
+        <p>designed by creadiv3</p>
+        <p>with love to code</p>
+      </div>
+    </footer>
   </body>
 </html>
